--- a/Project/welcome page.htm
+++ b/Project/welcome page.htm
@@ -22,11 +22,12 @@
 </head>
 <body>
 	<h1>Thanks for filling the form, you can now access our library!</h1>
-	<p>Welcome! In this library, we have a big collection of books for you to choose from. This bookshelf has some book samples you might be interested in, here we have:</p>
+	<p>Since ancient times, books have been an important source of information, as knowledge, history and religion were all passed down and expanded through books. And there are also novels that are full of life lessons for us.</p><br>
+	<p>In the bookshelf below, we have a few book samples for you to check, each shelf contains a different type of books, and they are sorted as follows:</p>
 	<ul>
-	  <li style="color:#ff1a1a;">Novels on the left shelf</li>
-	  <li style="color:#0066ff;">Historical books on the middle shelf</li>
-	  <li style="color:lime;">Sceintific books on the right shelf</li>
+	  <li>Novels on the left shelf</li>
+	  <li>Historical books on the middle shelf</li>
+	  <li>Sceintific books on the right shelf</li>
 	</ul>
 	<img src="bookshelf.jpg" id="bookshelf" alt="Bookshelf" usemap="#shelfmap" width="600" height="400">
 	<map name="shelfmap">
