--- a/index.htm
+++ b/index.htm
@@ -4,6 +4,6 @@
     <title>Index</title>
   </head>
   <body>
-    <a href="Project\Registration Page.htm"></a>
+    <a href="Project\Registration Page.htm">Click here</a>
   </body>
 </html>
