--- a/Registeration Page.htm
+++ b/Registeration Page.htm
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Registeration Page</title>
-	<link rel="icon" href="book.png" type="image/gif" sizes="16x16">
+	<link rel="icon" href="Project\book.png" type="image/gif" sizes="16x16">
 	<style>
 	.col-1 {width: 8.33%;}
 	.col-2 {width: 16.66%;}
@@ -38,7 +38,7 @@
 	  font-size:125%;
 	}
 	body{
-	  background:#cc6600 url("library0.jpg");
+	  background:#cc6600 url("Project\library0.jpg");
 	  background-size: cover;
 	}
 	form{
@@ -98,7 +98,7 @@
 	</div>
 	<hr>
 	<div class="row">
-	   <form action="welcome page.htm" class="col-7">
+	   <form action="Project\welcome page.htm" class="col-7">
 		<label for="fname">First Name:</label><br>
 		<input type="text" placeholder="Enter Your Name" name="fname" pattern="(?=.*[A-Z])(?=.*[a-z]).{3,}" title="Please enter a proper name" required><br><br>
 		<label for="lname">Last Name:</label><br>
